Fixed nav-trigger anchor tag bug. Drop-in nav now slides below logo with z-index update.

--- a/scss/partials/_navigation.scss
+++ b/scss/partials/_navigation.scss
@@ -29,6 +29,10 @@
 		}
 	}
 
+	.logo {
+		z-index: 2;
+	}	
+	
 	img {
 		display: block;
 		margin-left: 0;
@@ -79,6 +83,7 @@
 			right: 20px;
 			width: 50px;
 			height: 50px;
+			z-index: 3;
 			@include border-radius;
 
 			background-color: transparent;
